--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,6 @@
 *.js linguist-detectable=true
 *.java linguist-detectable=false
 *.c++ linguist-detectable=false
+*.ts linguist-detectable=true
+*.c linguist-detectable=false
+*.rb linguist-detectable=false
